# uquad

sw/src/: CMakeLists.txt
sw/src/cmake/: Config.cmake
sw/src/cmake/Platform/Android/: Config.cmake
sw/src/cmake/Platform/Mac/: Config.cmake
sw/src/cmake/Platform/iOS/: Config.cmake
sw/src/cmake/Toolchain/: NDK.cmake  StandaloneClang.cmake  iOS.cmake
sw/src/uquad/: CMakeLists.txt  Config.h
sw/src/uquad/apps/: CMakeLists.txt
sw/src/uquad/apps/camera-server/: CMakeLists.txt  main.cpp
sw/src/uquad/apps/camera_example/: CMakeLists.txt  main.cpp
sw/src/uquad/apps/control/: CMakeLists.txt
sw/src/uquad/apps/cv/: CMakeLists.txt
sw/src/uquad/apps/example1/: CMakeLists.txt  main.cpp
sw/src/uquad/apps/keep_calm/: CMakeLists.txt  main.cpp
sw/src/uquad/apps/uQuadRC/: CMakeLists.txt
sw/src/uquad/apps/uQuadTool/: Application.cpp  Application.h  CMakeLists.txt  Config.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SensorsAndMotorsView.cpp  SensorsAndMotorsView.h  SensorsAndMotorsView.ui  main.cpp
sw/src/uquad/apps/v4l2_capturer/: CMakeLists.txt  capture.c  capturer_mmap.c  main.c  util.c  video_device.c
sw/src/uquad/base/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ChronoIO.h  Config.h  Delegate.h  Error.cpp  Error.h  FileHandle.cpp  FileHandle.h  FileMappingMemory.cpp  FileMappingMemory.h  Graph.cpp  Graph.h  IOFileStream.cpp  IOFileStream.h  IOSocketStream.cpp  IOSocketStream.h  IOStream.cpp  IOStream.h  Image.cpp  Image.h  ImageFormat.h  IntrusivePtrIO.h  Log.cpp  Log.h  Memory.cpp  Memory.h  MemoryBuffer.cpp  MemoryBuffer.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  PixelBuffer.cpp  PixelBuffer.h  PixelFormat.h  PixelSampleBuffer.cpp  (+16 more)
sw/src/uquad/base/android/: Application.cpp  Application.h
sw/src/uquad/base/ios/: Application.h  Application.mm
sw/src/uquad/base/mac/: Application.h  Application.mm
sw/src/uquad/base/tests/: CMakeLists.txt  testDelegate.cpp  testFileMappingMemory.cpp  testGraph.cpp  testIOArchive.cpp  testImage.cpp  testObjectFactory.cpp  testRefCounted.cpp  testYieldContext.cpp  testYieldEvent.cpp
sw/src/uquad/comm/: CMakeLists.txt  CameraClient.cpp  CameraClient.h  CameraServer.cpp  CameraServer.h  Channel.cpp  Channel.h  Config.h  Log.h  Message.cpp  Message.h  RemoteControl.cpp  RemoteControl.h  RemoteControlClient.cpp  RemoteControlClient.h  RemoteControlServer.cpp  RemoteControlServer.h
sw/src/uquad/comm/msg/: ArmMotors.cpp  ArmMotors.h
sw/src/uquad/comm/tests/: CMakeLists.txt  test.cpp  testCameraServer.cpp  testChannel.cpp  testMsg.cpp  testRemoteControl.cpp
sw/src/uquad/control/: Accelerometer.cpp  Accelerometer.h  AccelerometerCalibration.cpp  AccelerometerCalibration.h  AttitudeControl.cpp  AttitudeControl.h  AttitudeControlSimple.cpp  AttitudeControlSimple.h  Barometer.cpp  Barometer.h  Block.cpp  Block.h  BlockLibrary.cpp  BlockLibrary.h  CMakeLists.txt  Clock.cpp  Clock.h  Config.h  Filters.h  Graph.cpp  Graph.h  Gyroscope.cpp  Gyroscope.h  GyroscopeCalibration.cpp  GyroscopeCalibration.h  Log.h  Magnetometer.cpp  Magnetometer.h  MagnetometerCalibration.cpp  MagnetometerCalibration.h  MotorsThrust.cpp  MotorsThrust.h  PoseEstimation.cpp  PoseEstimation.h  PositionControl.cpp  PositionControl.h  PositionControlSimple.cpp  PositionControlSimple.h  QuadMotorsThrust.cpp  QuadMotorsThrust.h  (+12 more)
sw/src/uquad/control/blocks/: Accelerometer.cpp  Accelerometer.h  AttitudeControl.cpp  AttitudeControl.h  AttitudeControlSimple.cpp  AttitudeControlSimple.h  Barometer.cpp  Barometer.h  Clock.cpp  Clock.h  Gyroscope.cpp  Gyroscope.h  Magnetometer.cpp  Magnetometer.h  ManualControl.cpp  ManualControl.h  ManualControlSimple.cpp  ManualControlSimple.h  MotorsThrust.cpp  MotorsThrust.h  PoseEstimation.cpp  PoseEstimation.h  PositionControl.cpp  PositionControl.h  PositionControlSimple.cpp  PositionControlSimple.h  QuadMotorsThrust.cpp  QuadMotorsThrust.h  QuadMotorsThrustSimple.cpp  QuadMotorsThrustSimple.h  UQuadSensors.cpp  UQuadSensors.h
sw/src/uquad/control/ekf/: PoseEstimation.cpp  PoseEstimation.h  estimator_22states.cpp  estimator_22states.h
sw/src/uquad/control/ekf2/: EKF.cpp  EKF.h  EKFIf.cpp  EKFIf.h  PoseEstimation.cpp  PoseEstimation.h
sw/src/uquad/control/ikf/: PoseEstimation.cpp  PoseEstimation.h  approximations.cpp  approximations.h  build.h  fusion.cpp  fusion.h  magnetic.cpp  magnetic.h  matrix.cpp  matrix.h  orientation.cpp  orientation.h  types.h
sw/src/uquad/control/madgwick/: PoseEstimation.cpp  PoseEstimation.h  imu_filter.cpp  imu_filter.h
sw/src/uquad/control/tests/: CMakeLists.txt  testAccelerometerCalibration.cpp  testAttitudeControl.cpp  testEKFPoseEstimation.cpp  testGyroscopeCalibration.cpp  testMagnetometerCalibration.cpp  testMotorsThrust.cpp  testPoseEstimation.cpp  testPositionControl.cpp  testSystem.cpp
sw/src/uquad/cv/: Algorithm.cpp  Algorithm.h  AlgorithmLibrary.cpp  AlgorithmLibrary.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  Config.h  Log.h  PoseTracker.cpp  PoseTracker.h
sw/src/uquad/cv/ptam/: Context.cpp  Context.h  PoseTracker.cpp  (+1 more)
sw/src/uquad/hal/: CMakeLists.txt  Camera.cpp  Camera.h  Config.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Log.h  UQuad.cpp  UQuad.h  UQuadDevice.cpp  UQuadDevice.h
sw/src/uquad/math/: CMakeLists.txt  Config.h  Constant.h  FixedPoint.h  Utils.h
sw/src/uquad/media/: CMakeLists.txt  Capture.cpp  Capture.h  Codec.cpp  Codec.h  CodecProfile.h  CodecType.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Config.h  Consumer.cpp  Consumer.h  ContainerFormat.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  Log.h  Playout.cpp  Playout.h  Port.cpp  Port.h  RawReader.cpp  RawReader.h  RawWriter.cpp  RawWriter.h  Reader.cpp  Reader.h  Sample.h  SampleFormat.cpp  SampleFormat.h  SampleType.h  Sink.cpp  Sink.h  Source.cpp  Source.h  VideoCodec.cpp  VideoCodec.h  (+8 more)
sw/src/uquad/svc/: CMakeLists.txt  Config.h
sw/src/uquad/utility/: CMakeLists.txt  Config.h  Constant.h  EigenMatrixSerialization.h  HashExtensions.h  RunService.h  Singleton.h  TypeIndexExtractor.h
(+319 files in other folders)
